--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,6 @@
 [build]
-  command = "npm run build && npm run export"
+  command   = "npm run build"
   publish = "out"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
-[context.production.environment]
-NEXT_SERVERLESS = "true"
-NODE_ENV = "production"
