--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/lab": "latest",
 		"@ory/kratos-client": "^0.5.4-alpha.1",
+		"@parse/react-ssr": "0.0.1-alpha.14",
 		"clsx": "1.1.1",
 		"electron-is-dev": "^1.1.0",
 		"electron-log": "4.2.4",
@@ -82,6 +83,7 @@
 		"next": "latest",
 		"next-on-netlify": "^2.6.3",
 		"nprogress": "^0.2.0",
+		"parse": "^3.1.0",
 		"prefs-rcl": "^0.1.8",
 		"prop-types": "15.7.2",
 		"raw-loader": "^4.0.2",
