--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.0.4",
 		"@testing-library/user-event": "12.1.7",
+		"autoprefixer": "^10.2.5",
 		"babel-eslint": "^10.1.0",
 		"babel-jest": "^26.5.2",
 		"babel-plugin-istanbul": "^6.0.0",
@@ -59,7 +60,9 @@
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"jest": "^26.5.3",
 		"jest-dom": "^4.0.0",
-		"prettier": "^2.0.5"
+		"postcss": "^8.2.10",
+		"prettier": "^2.0.5",
+		"tailwindcss": "^2.1.1"
 	},
 	"dependencies": {
 		"@material-ui/core": "^4.9.12",
