--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.0.4",
 		"@testing-library/user-event": "12.1.7",
+		"@tailwindcss/jit": "0.1.18",
 		"autoprefixer": "^10.2.5",
 		"babel-eslint": "^10.1.0",
 		"babel-jest": "^26.5.2",
