Package Added - Tailwind Forms - HeadlessUI React Package
Config Modified
- Added TailWind Config with customs colors for Autographa

Modules & Pages Added
- Projects

Static Files
- Icons Svgs

--- a/package.json
+++ b/package.json
@@ -38,11 +38,11 @@
 	},
 	"devDependencies": {
 		"@netlify/plugin-nextjs": "^3.0.3",
+		"@tailwindcss/jit": "0.1.18",
 		"@testing-library/dom": "^7.25.0",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.0.4",
 		"@testing-library/user-event": "12.1.7",
-		"@tailwindcss/jit": "0.1.18",
 		"autoprefixer": "^10.2.5",
 		"babel-eslint": "^10.1.0",
 		"babel-jest": "^26.5.2",
@@ -66,11 +66,15 @@
 		"tailwindcss": "^2.1.1"
 	},
 	"dependencies": {
+		"@headlessui/react": "^1.0.0",
+		"@heroicons/react": "^1.0.1",
 		"@material-ui/core": "^4.9.12",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/lab": "latest",
 		"@ory/kratos-client": "^0.5.4-alpha.1",
 		"@parse/react-ssr": "0.0.1-alpha.14",
+		"@tailwindcss/forms": "^0.3.2",
+		"bible-reference-rcl": "^0.2.0",
 		"clsx": "1.1.1",
 		"electron-is-dev": "^1.1.0",
 		"electron-log": "4.2.4",
@@ -81,7 +85,6 @@
 		"jsonwebtoken": "^8.5.1",
 		"localforage": "1.9.0",
 		"markdown-translatable": "^1.0.4",
-		"bible-reference-rcl": "^0.2.0",
 		"mobx": "5.15.4",
 		"mobx-react": "6.3.0",
 		"moment": "^2.28.0",
