--- a/package.json
+++ b/package.json
@@ -113,6 +113,11 @@
 	},
 	"optionalDependencies": {
 		"bufferutil": "^4.0.3",
-		"utf-8-validate": "^5.0.5"
+		"utf-8-validate": "^5.0.5",
+		"resource-workspace-rcl": "0.6.0",
+		"sweetalert": "2.1.2",
+		"scripture-resources-rcl": "^3.2.0",
+		"translation-helps-rcl": "^1.5.0",
+		"winston": "^3.3.3"
 	}
 }
