--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
 		"mobx": "5.15.4",
 		"mobx-react": "6.3.0",
 		"moment": "^2.28.0",
-		"next": "^10.2.0",
+		"next": "latest",
 		"next-on-netlify": "^2.6.3",
 		"nprogress": "^0.2.0",
 		"parse": "^3.1.0",
