lint fixed and usfm package update

--- a/renderer/jsconfig.json
+++ b/renderer/jsconfig.json
@@ -12,6 +12,9 @@
       "@/modules/*": [
         "src/modules/*"
       ],
+      "@/corefunctions/*": [
+        "src/core/*"
+      ],
     }
   }
 }
