--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,6 +26,7 @@
         "no-shadow": "off",
         "import/prefer-default-export": "off",
         "import/no-extraneous-dependencies": "off",
+        "jsx-a11y/click-events-have-key-events": "off",
         "react/require-default-props": "off",
         "react/forbid-prop-types": "off",
         "linebreak-style": 0,
