multiverse selection with basic usecase

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -11,6 +11,12 @@
       "@/modules/*": [
         "renderer/src/modules/*"
       ],
+      "@/core/*": [
+        "renderer/src/core/*"
+      ],
+      "@/util/*": [
+        "renderer/src/util/*"
+      ],
     }
   }
 }
