--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,16 +2,12 @@
 	"[javascript]": {
 		"editor.formatOnSave": false
 	},
-	// "editor.fontWeight": "500",
-	"editor.rulers": [
-		80
-	],
+	"editor.fontWeight": "500",
+	"editor.rulers": [80],
 	"editor.fontLigatures": true,
 	"prettier.tabWidth": 4,
 	"eslint.alwaysShowStatus": true,
-	"prettier.disableLanguages": [
-		"js"
-	],
+	"prettier.disableLanguages": ["js"],
 	"files.autoSave": "onFocusChange",
 	"prettier.useTabs": true,
 	"editor.formatOnSave": true,
@@ -33,5 +29,5 @@
 		"source.fixAll.eslint": true
 	},
 	"eslint.workingDirectories": [],
-	// "editor.fontSize": 20
+	"editor.fontSize": 20
 }
