--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -32,6 +32,12 @@
         "linebreak-style": 0,
         "global-require": 0,
         "eslint linebreak-style": [0, "error", "windows"],
+        "import/no-unresolved": [
+            "error",
+            {
+              "ignore": [ ".svg" ]
+            }
+        ],
         "curly": [
             "error",
             "all"
