test for projectlist

--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 		}
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.14.2",
+		"@babel/preset-react": "^7.13.13",
 		"@netlify/plugin-nextjs": "^3.0.3",
 		"@svgr/webpack": "^5.5.0",
 		"@tailwindcss/jit": "0.1.18",
@@ -46,12 +48,14 @@
 		"@testing-library/user-event": "12.1.7",
 		"autoprefixer": "^10.2.5",
 		"babel-eslint": "^10.1.0",
-		"babel-jest": "^26.5.2",
+		"babel-jest": "^26.6.3",
 		"babel-plugin-istanbul": "^6.0.0",
 		"babel-plugin-react-intl": "^3.0.1",
 		"buffer-loader": "^0.1.0",
 		"electron": "^10.1.3",
 		"electron-builder": "^22.9.1",
+		"enzyme": "^3.11.0",
+		"enzyme-adapter-react-16": "^1.15.6",
 		"eslint": "^7.11.0",
 		"eslint-config-airbnb": "^18.2.0",
 		"eslint-plugin-import": "^2.22.1",
@@ -60,7 +64,7 @@
 		"eslint-plugin-react": "^7.21.4",
 		"eslint-plugin-react-hooks": "^4.1.2",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
-		"jest": "^26.5.3",
+		"jest": "^26.6.3",
 		"jest-dom": "^4.0.0",
 		"postcss": "^8.2.15",
 		"prettier": "^2.3.0",
