removed trnslation-helpsrcl to fix canvas build error

--- a/package.json
+++ b/package.json
@@ -113,11 +113,6 @@
 	},
 	"optionalDependencies": {
 		"bufferutil": "^4.0.3",
-		"utf-8-validate": "^5.0.5",
-		"resource-workspace-rcl": "0.6.0",
-		"sweetalert": "2.1.2",
-		"scripture-resources-rcl": "^3.2.0",
-		"translation-helps-rcl": "^1.5.0",
-		"winston": "^3.3.3"
+		"utf-8-validate": "^5.0.5"
 	}
 }
