--- a/renderer/src/lib/AdvanceSettings.json
+++ b/renderer/src/lib/AdvanceSettings.json
@@ -1,8 +1,79 @@
 {
   "canonSpecification":[
     {
+    "title":"All Books",
+    "currentScope":[
+      "GEN",
+      "EXO",
+      "LEV",
+      "NUM",
+      "DEU",
+      "JOS",
+      "JDG",
+      "RUT",
+      "1SA",
+      "2SA",
+      "1KI",
+      "2KI",
+      "1CH",
+      "2CH",
+      "EZR",
+      "NEH",
+      "EST",
+      "JOB",
+      "PSA",
+      "PRO",
+      "ECC",
+      "SNG",
+      "ISA",
+      "JER",
+      "LAM",
+      "EZK",
+      "DAN",
+      "HOS",
+      "JOL",
+      "AMO",
+      "OBA",
+      "JON",
+      "MIC",
+      "NAM",
+      "HAB",
+      "ZEP",
+      "HAG",
+      "ZEC",
+      "MAL",
+      "MAT",
+      "MRK",
+      "LUK",
+      "JHN",
+      "ACT",
+      "ROM",
+      "1CO",
+      "2CO",
+      "GAL",
+      "EPH",
+      "PHP",
+      "COL",
+      "1TH",
+      "2TH",
+      "1TI",
+      "2TI",
+      "TIT",
+      "PHM",
+      "HEB",
+      "JAS",
+      "1PE",
+      "2PE",
+      "1JN",
+      "2JN",
+      "3JN",
+      "JUD",
+      "REV"
+    ]
+    },
+    {
       "title":"Old Testament (OT)",
-      "canon":[
+      "currentScope":[
       "GEN",
       "EXO",
       "LEV",
@@ -46,7 +117,7 @@
     },
     {
       "title":"New Testament (NT)",
-      "canon":[
+      "currentScope":[
         "MAT",
         "MRK",
         "LUK",
@@ -75,77 +146,6 @@
         "JUD",
         "REV"
       ]
-    },
-    {
-      "title":"AllBooks",
-      "canon":[
-        "GEN",
-    "EXO",
-    "LEV",
-    "NUM",
-    "DEU",
-    "JOS",
-    "JDG",
-    "RUT",
-    "1SA",
-    "2SA",
-    "1KI",
-    "2KI",
-    "1CH",
-    "2CH",
-    "EZR",
-    "NEH",
-    "EST",
-    "JOB",
-    "PSA",
-    "PRO",
-    "ECC",
-    "SNG",
-    "ISA",
-    "JER",
-    "LAM",
-    "EZK",
-    "DAN",
-    "HOS",
-    "JOL",
-    "AMO",
-    "OBA",
-    "JON",
-    "MIC",
-    "NAM",
-    "HAB",
-    "ZEP",
-    "HAG",
-    "ZEC",
-    "MAL",
-    "MAT",
-    "MRK",
-    "LUK",
-    "JHN",
-    "ACT",
-    "ROM",
-    "1CO",
-    "2CO",
-    "GAL",
-    "EPH",
-    "PHP",
-    "COL",
-    "1TH",
-    "2TH",
-    "1TI",
-    "2TI",
-    "TIT",
-    "PHM",
-    "HEB",
-    "JAS",
-    "1PE",
-    "2PE",
-    "1JN",
-    "2JN",
-    "3JN",
-    "JUD",
-    "REV"
-      ]
     }
   ],
   "copyright":[
@@ -156,6 +156,16 @@
     { "id": "BY_NC_SA", "title": "Attribution-NonCommercial-ShareAlike" ,"licence":""},
     { "id": "BY_NC_ND", "title": "Attribution-NonCommercial-NoDerivatives" ,"licence":""},
     { "id": "CC0", "title": "CC0" ,"licence":""}
+  ],
+  "versification" :[
+    { "title": "King James Version (KJV)" },
+    { "title": "New Internation Version (NIV)" }
+  ],
+  "languages": [
+    { "title": "English" },
+    { "title": "Hindi" },
+    { "title": "Malayalam" },
+    { "title": "Tamil" },
+    { "title": "Odia" }
   ]
-
 }
