--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"babel-plugin-istanbul": "^6.0.0",
 		"babel-plugin-react-intl": "^3.0.1",
 		"buffer-loader": "^0.1.0",
+		"canvas": "^2.8.0",
 		"electron": "^10.1.3",
 		"electron-builder": "^22.9.1",
 		"enzyme": "^3.11.0",
@@ -67,6 +68,7 @@
 		"eslint-plugin-simple-import-sort": "^7.0.0",
 		"jest": "^26.6.3",
 		"jest-dom": "^4.0.0",
+		"null-loader": "^4.0.1",
 		"postcss": "^8.3.5",
 		"prettier": "^2.3.0",
 		"tailwindcss": "^2.1.4"
@@ -113,7 +115,7 @@
 		"usfm-editor": "0.8.0-SNAPSHOT.6",
 		"webpack-node-externals": "^3.0.0",
 		"winston": "^3.3.3",
-		"ws": "^7.4.5"
+		"ws": "^7.5.0"
 	},
 	"optionalDependencies": {
 		"bufferutil": "^4.0.3",
