--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
 		"sweetalert": "2.1.2",
 		"translation-helps-rcl": "^1.5.0",
 		"usfm-editor": "0.8.0-SNAPSHOT.6",
+		"usfm-grammar": "^2.0.0",
 		"webpack-node-externals": "^3.0.0",
 		"winston": "^3.3.3",
 		"ws": "^7.5.0"
