--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"clean": "rimraf dist renderer/.next renderer/out",
 		"start": "electron .",
 		"dev": "next dev",
+		"prod": "npm run build && next start",
 		"test": "jest",
 		"lint": "eslint ./renderer/src",
 		"lint:fix": "eslint ./renderer/src --fix",
