--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"localforage": "1.9.0",
 		"markdown-translatable": "^1.0.4",
+		"md5": "^2.3.0",
 		"mobx": "5.15.4",
 		"mobx-react": "6.3.0",
 		"moment": "^2.28.0",
@@ -114,6 +115,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-intl": "^5.18.0",
+		"sha1": "^1.1.1",
 		"sweetalert": "2.1.2",
 		"translation-helps-rcl": "^1.5.0",
 		"usfm-editor": "0.8.0-SNAPSHOT.6",
