--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
 		"sha1": "^1.1.1",
 		"sweetalert": "2.1.2",
 		"translation-helps-rcl": "^1.5.0",
-		"usfm-editor": "0.8.0-SNAPSHOT.6",
+		"usfm-editor": "0.8.0",
 		"usfm-grammar": "^2.0.0",
 		"webpack-node-externals": "^3.0.0",
 		"winston": "^3.3.3",
