adding independent row and columns with various resources

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,9 @@
       "@/icons/*": [
         "public/icons/*"
       ],
+      "@/illustrations/*": [
+        "public/illustrations/*"
+      ],
       "@/components/*": [
         "renderer/src/components/*"
       ],
