--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
 		"electron-updater": "^4.3.4",
 		"eslint-import-resolver-alias": "^1.1.2",
 		"font-list": "^1.3.1",
+		"fs-extra": "^10.0.0",
 		"get-system-fonts": "^2.0.2",
 		"gitea-react-toolkit": "^1.3.5",
 		"is-electron": "^2.2.0",
