--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^11.0.4",
 		"@testing-library/user-event": "12.1.7",
+		"ajv": "^6.12.2",
 		"autoprefixer": "^10.2.6",
 		"babel-eslint": "^10.1.0",
 		"babel-jest": "^26.6.3",
