--- a/package.json
+++ b/package.json
@@ -134,8 +134,10 @@
 		"mobx": "5.15.4",
 		"mobx-react": "6.3.0",
 		"moment": "^2.28.0",
-		"next": "11.1.0",
+		"next": "^11.0.2-canary.8",
+		"next-images": "^1.8.1",
 		"next-on-netlify": "^2.6.3",
+		"next-optimized-images": "^2.6.2",
 		"next-transpile-modules": "^8.0.0",
 		"nprogress": "^0.2.0",
 		"parse": "^3.3.0",
