--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A Bible translation editor for everyone.",
 	"email": "mathew.joel@protonmail.com",
 	"author": "Friends of Agape <mathew.joel@protonmail.com>",
-	"version": "2.0.0",
+	"version": "2.0.0-beta.1",
 	"license": "MIT",
 	"private": true,
 	"main": "main/index.js",
