--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
 	"name": "autographa",
 	"productName": "autographa-editor",
 	"description": "A Bible translation editor for everyone.",
-	"email": "mathew.joel@protonmail.com",
-	"author": "Friends of Agape <mathew.joel@protonmail.com>",
+	"email": "autographa.support@bridgeconn.com",
+	"author": "Friends of Agape <autographa.support@bridgeconn.com>",
 	"version": "2.0.0-beta.1",
 	"license": "MIT",
 	"private": true,
