--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 	},
 	"scripts": {
 		"clean": "rimraf dist renderer/.next renderer/out",
-		"start": "electron .",
+		"start": "electronite .",
 		"dev": "next dev",
 		"prod": "npm run build && next start",
 		"test": "jest",
@@ -85,7 +85,6 @@
 		"babel-plugin-react-intl": "^3.0.1",
 		"buffer-loader": "^0.1.0",
 		"canvas": "^2.8.0",
-		"electron": "^10.1.3",
 		"electron-builder": "^22.9.1",
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.6",
@@ -121,6 +120,7 @@
 		"electron-log": "4.2.4",
 		"electron-next": "^3.1.5",
 		"electron-updater": "^4.3.4",
+		"electronite": "^12.0.5-graphite",
 		"eslint-import-resolver-alias": "^1.1.2",
 		"font-list": "^1.3.1",
 		"fs-extra": "^10.0.0",
