--- a/package.json
+++ b/package.json
@@ -149,11 +149,11 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-intl": "^5.18.0",
-		"sha1": "^1.1.1",
 		"sweetalert": "2.1.2",
 		"translation-helps-rcl": "^1.5.0",
 		"usfm-editor": "0.8.0",
 		"usfm-grammar": "^2.0.0",
+		"uuid": "^8.3.2",
 		"webpack-node-externals": "^3.0.0",
 		"winston": "^3.3.3",
 		"ws": "^7.5.0"
