--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"version": "2.0.0-beta.4",
 	"license": "MIT",
 	"private": true,
-	"main": "main/index.js",
+	"main": "electron/index.js",
 	"homepage": "./",
 	"repository": {
 		"type": "git",
@@ -15,10 +15,11 @@
 	},
 	"scripts": {
 		"clean": "rimraf dist renderer/.next renderer/out",
-		"start": "electronite .",
+		"start": "electron .",
 		"dev": "next dev",
 		"prod": "npm run build && next start",
 		"test": "jest",
+		"e2e": "npx playwright test",
 		"lint": "eslint ./renderer/src",
 		"lint:fix": "eslint ./renderer/src --fix",
 		"maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
@@ -81,6 +82,7 @@
 		"@babel/preset-env": "^7.14.2",
 		"@babel/preset-react": "^7.13.13",
 		"@netlify/plugin-nextjs": "^3.9.0",
+		"@playwright/test": "^1.16.3",
 		"@svgr/webpack": "^5.5.0",
 		"@testing-library/dom": "^7.25.0",
 		"@testing-library/jest-dom": "^5.11.4",
@@ -109,6 +111,7 @@
 		"jest": "^26.6.3",
 		"jest-dom": "^4.0.0",
 		"null-loader": "^4.0.1",
+		"playwright": "^1.16.3",
 		"postcss": "^8.3.6",
 		"prettier": "^2.3.0",
 		"tailwindcss": "^2.2.17"
@@ -125,11 +128,11 @@
 		"@tailwindcss/typography": "^0.4.1",
 		"bible-reference-rcl": "^0.2.0",
 		"clsx": "1.1.1",
+		"electron": "^16.0.1",
 		"electron-is-dev": "^1.1.0",
 		"electron-log": "4.2.4",
 		"electron-next": "^3.1.5",
 		"electron-updater": "^4.3.4",
-		"electronite": "^12.0.5-graphite",
 		"eslint-import-resolver-alias": "^1.1.2",
 		"font-list": "^1.3.1",
 		"fs-extra": "^10.0.0",
