--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
 		"babel-plugin-react-intl": "^3.0.1",
 		"buffer-loader": "^0.1.0",
 		"canvas": "^2.8.0",
+		"electron": "12.0.5",
 		"electron-builder": "^22.9.1",
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.6",
@@ -128,7 +129,6 @@
 		"@tailwindcss/typography": "^0.4.1",
 		"bible-reference-rcl": "^0.2.0",
 		"clsx": "1.1.1",
-		"electron": "^16.0.1",
 		"electron-is-dev": "^1.1.0",
 		"electron-log": "4.2.4",
 		"electron-next": "^3.1.5",
