--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 	"version": "2.0.0-beta.4",
 	"license": "MIT",
 	"private": true,
-	"main": "electron/index.js",
+	"main": "main/index.js",
 	"homepage": "./",
 	"repository": {
 		"type": "git",
@@ -46,8 +46,6 @@
 			"renderer/jsconfig.json",
 			"styles/**/*"
 		],
-		"electronVersion": "null",
-		"electronDist": "./node_modules/electronite/dist",
 		"linux": {
 			"target": [
 				"deb"
@@ -96,7 +94,7 @@
 		"babel-plugin-react-intl": "^3.0.1",
 		"buffer-loader": "^0.1.0",
 		"canvas": "^2.8.0",
-		"electron": "12.0.5",
+		"electron": "12.1.0",
 		"electron-builder": "^22.9.1",
 		"enzyme": "^3.11.0",
 		"enzyme-adapter-react-16": "^1.15.6",
