--- a/package.json
+++ b/package.json
@@ -137,6 +137,7 @@
 		"get-system-fonts": "^2.0.2",
 		"gitea-react-toolkit": "^1.3.5",
 		"is-electron": "^2.2.0",
+		"js-yaml": "^4.1.0",
 		"jsonwebtoken": "^8.5.1",
 		"localforage": "1.9.0",
 		"markdown-translatable": "^1.0.4",
