--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A Bible translation editor for everyone.",
 	"email": "autographa.support@bridgeconn.com",
 	"author": "Friends of Agape <autographa.support@bridgeconn.com>",
-	"version": "2.0.0-beta.5",
+	"version": "2.0.0",
 	"license": "MIT",
 	"private": true,
 	"main": "main/index.js",
