--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
 	"rules": {
 		"react/react-in-jsx-scope": "off",
 		"no-underscore-dangle": "off",
+		"no-param-reassign": [2, { "props": false }],
 		"react/jsx-filename-extension": [
 			1,
 			{
