--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
 		"react/react-in-jsx-scope": "off",
 		"no-underscore-dangle": "off",
 		"no-param-reassign": [2, { "props": false }],
+		"camelcase": "off",
 		"react/jsx-filename-extension": [
 			1,
 			{
