--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
 		"no-underscore-dangle": "off",
 		"max-len": "off",
 		"no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
+		"prefer-destructuring": "off",
 		"no-param-reassign": [2, { "props": false }],
 		"camelcase": "off",
 		"react/jsx-filename-extension": [
