--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
 	"rules": {
 		"react/react-in-jsx-scope": "off",
 		"no-underscore-dangle": "off",
+		"no-unused-expressions": "off",
 		"max-len": "off",
 		"no-plusplus": ["error", { "allowForLoopAfterthoughts": true }],
 		"prefer-destructuring": "off",
