--- a/package.json
+++ b/package.json
@@ -118,7 +118,7 @@
 	"dependencies": {
 		"@headlessui/react": "^1.4.1",
 		"@heroicons/react": "^1.0.5",
-		"@material-ui/core": "^4.12.3",
+		"@material-ui/core": "^4.9.12",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/lab": "latest",
 		"@ory/kratos-client": "^0.5.4-alpha.1",
@@ -135,7 +135,7 @@
 		"font-list": "^1.3.1",
 		"fs-extra": "^10.0.0",
 		"get-system-fonts": "^2.0.2",
-		"gitea-react-toolkit": "1.11.0",
+		"gitea-react-toolkit": "^1.3.5",
 		"is-electron": "^2.2.0",
 		"js-yaml": "^4.1.0",
 		"jsonwebtoken": "^8.5.1",
@@ -158,7 +158,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-intl": "^5.18.0",
-		"translation-helps-rcl": "3.2.0",
+		"translation-helps-rcl": "^1.5.0",
 		"usfm-editor": "0.8.0",
 		"usfm-grammar": "^2.0.0",
 		"uuid": "^8.3.2",
@@ -168,7 +168,7 @@
 	},
 	"optionalDependencies": {
 		"bufferutil": "^4.0.3",
-		"scripture-resources-rcl": "5.1.0",
+		"scripture-resources-rcl": "^3.2.0",
 		"utf-8-validate": "^5.0.5"
 	}
 }
