--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
 		"raw-loader": "^4.0.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-i18next": "^11.16.1",
 		"react-intl": "^5.18.0",
 		"translation-helps-rcl": "^1.5.0",
 		"usfm-editor": "0.8.0",
