--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A Bible translation editor for everyone.",
 	"email": "autographa.support@bridgeconn.com",
 	"author": "Friends of Agape <autographa.support@bridgeconn.com>",
-	"version": "2.0.2",
+	"version": "2.0.3",
 	"license": "MIT",
 	"private": true,
 	"main": "main/index.js",
@@ -87,7 +87,7 @@
 		"@testing-library/react": "^11.0.4",
 		"@testing-library/user-event": "12.1.7",
 		"ajv": "^6.12.2",
-		"autoprefixer": "^10.2.6",
+		"autoprefixer": "^10.4.7",
 		"babel-eslint": "^10.1.0",
 		"babel-jest": "^26.6.3",
 		"babel-plugin-istanbul": "^6.0.0",
@@ -113,18 +113,18 @@
 		"playwright": "^1.16.3",
 		"postcss": "^8.3.6",
 		"prettier": "^2.3.0",
-		"tailwindcss": "^2.2.17"
+		"tailwindcss": "^3.0.24"
 	},
 	"dependencies": {
-		"@headlessui/react": "^1.4.1",
+		"@headlessui/react": "^1.6.4",
 		"@heroicons/react": "^1.0.5",
 		"@material-ui/core": "^4.9.12",
 		"@material-ui/icons": "^4.9.1",
 		"@material-ui/lab": "latest",
 		"@ory/kratos-client": "^0.5.4-alpha.1",
 		"@parse/react-ssr": "0.0.1-alpha.14",
-		"@tailwindcss/forms": "^0.3.4",
-		"@tailwindcss/typography": "^0.4.1",
+		"@tailwindcss/forms": "^0.5.2",
+		"@tailwindcss/typography": "^0.5.2",
 		"bible-reference-rcl": "^0.2.0",
 		"clsx": "1.1.1",
 		"electron-is-dev": "^1.1.0",
@@ -136,6 +136,7 @@
 		"fs-extra": "^10.0.0",
 		"get-system-fonts": "^2.0.2",
 		"gitea-react-toolkit": "^1.3.5",
+		"i18next": "^21.6.14",
 		"is-electron": "^2.2.0",
 		"js-yaml": "^4.1.0",
 		"jsonwebtoken": "^8.5.1",
@@ -158,7 +159,6 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-i18next": "^11.16.1",
-		"react-intl": "^5.18.0",
 		"translation-helps-rcl": "^1.5.0",
 		"usfm-editor": "0.8.0",
 		"usfm-grammar": "^2.0.0",
