--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
 		"fs-extra": "^10.0.0",
 		"get-system-fonts": "^2.0.2",
 		"gitea-react-toolkit": "^1.3.5",
+		"i18next": "^21.8.7",
 		"is-electron": "^2.2.0",
 		"js-yaml": "^4.1.0",
 		"jsonwebtoken": "^8.5.1",
@@ -160,7 +161,7 @@
 		"react-i18next": "^11.16.1",
 		"react-intl": "^5.18.0",
 		"translation-helps-rcl": "^1.5.0",
-		"usfm-editor": "0.8.0",
+		"usfm-editor": "^0.8.7",
 		"usfm-grammar": "^2.0.0",
 		"uuid": "^8.3.2",
 		"webpack-node-externals": "^3.0.0",
