--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
 		"fs-extra": "^10.0.0",
 		"get-system-fonts": "^2.0.2",
 		"gitea-react-toolkit": "^1.3.5",
+		"i18next": "^21.6.14",
 		"is-electron": "^2.2.0",
 		"js-yaml": "^4.1.0",
 		"jsonwebtoken": "^8.5.1",
