--- a/package.json
+++ b/package.json
@@ -77,100 +77,98 @@
 		]
 	},
 	"devDependencies": {
-		"@babel/preset-env": "^7.14.2",
-		"@babel/preset-react": "^7.13.13",
-		"@netlify/plugin-nextjs": "^3.9.0",
-		"@playwright/test": "^1.16.3",
+		"@babel/eslint-parser": "^7.5.4",
+		"@babel/preset-env": "^7.18.2",
+		"@babel/preset-react": "^7.17.12",
+		"@netlify/plugin-nextjs": "^4.8.0",
+		"@playwright/test": "^1.22.2",
 		"@svgr/webpack": "^5.5.0",
-		"@testing-library/dom": "^7.25.0",
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^11.0.4",
-		"@testing-library/user-event": "12.1.7",
-		"ajv": "^6.12.2",
-		"autoprefixer": "^10.2.6",
-		"babel-eslint": "^10.1.0",
-		"babel-jest": "^26.6.3",
-		"babel-plugin-istanbul": "^6.0.0",
+		"@testing-library/dom": "^8.13.0",
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.3.0",
+		"@testing-library/user-event": "14.2.0",
+		"ajv": "^8.11.0",
+		"autoprefixer": "^10.4.7",
+		"babel-jest": "^28.1.1",
+		"babel-plugin-istanbul": "^6.1.1",
 		"babel-plugin-react-intl": "^3.0.1",
 		"buffer-loader": "^0.1.0",
-		"canvas": "^2.8.0",
-		"electron": "12.1.0",
-		"electron-builder": "^22.9.1",
-		"enzyme": "^3.11.0",
-		"enzyme-adapter-react-16": "^1.15.6",
-		"eslint": "^7.11.0",
-		"eslint-config-airbnb": "^18.2.0",
-		"eslint-config-next": "^11.0.0",
-		"eslint-plugin-import": "^2.22.1",
-		"eslint-plugin-jsx-a11y": "^6.3.1",
-		"eslint-plugin-prettier": "^3.1.4",
-		"eslint-plugin-react": "^7.21.4",
-		"eslint-plugin-react-hooks": "^4.1.2",
+		"canvas": "^2.9.1",
+		"electron": "19.0.4",
+		"electron-builder": "^23.0.3",
+		"eslint": "^8.17.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-config-next": "^12.1.6",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.5.1",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-react": "^7.30.0",
+		"eslint-plugin-react-hooks": "^4.5.0",
 		"eslint-plugin-simple-import-sort": "^7.0.0",
-		"jest": "^26.6.3",
+		"jest": "^28.1.1",
 		"jest-dom": "^4.0.0",
 		"null-loader": "^4.0.1",
-		"playwright": "^1.16.3",
-		"postcss": "^8.3.6",
-		"prettier": "^2.3.0",
-		"tailwindcss": "^2.2.17"
+		"playwright": "^1.22.2",
+		"postcss": "^8.4.14",
+		"prettier": "^2.7.0",
+		"tailwindcss": "^3.1.2"
 	},
 	"dependencies": {
-		"@headlessui/react": "^1.4.1",
-		"@heroicons/react": "^1.0.5",
-		"@material-ui/core": "^4.9.12",
-		"@material-ui/icons": "^4.9.1",
+		"@headlessui/react": "^1.6.4",
+		"@heroicons/react": "^1.0.6",
+		"@material-ui/core": "^4.12.4",
+		"@material-ui/icons": "^4.11.3",
 		"@material-ui/lab": "latest",
-		"@ory/kratos-client": "^0.5.4-alpha.1",
-		"@parse/react-ssr": "0.0.1-alpha.14",
-		"@tailwindcss/forms": "^0.3.4",
-		"@tailwindcss/typography": "^0.4.1",
-		"bible-reference-rcl": "^0.2.0",
+		"@ory/kratos-client": "^0.10.1",
+		"@parse/react-ssr": "0.0.1-alpha.18",
+		"@tailwindcss/forms": "^0.5.2",
+		"@tailwindcss/typography": "^0.5.2",
+		"bible-reference-rcl": "^1.1.0",
 		"clsx": "1.1.1",
-		"electron-is-dev": "^1.1.0",
-		"electron-log": "4.2.4",
+		"electron-is-dev": "^2.0.0",
+		"electron-log": "4.4.7",
 		"electron-next": "^3.1.5",
-		"electron-updater": "^4.3.4",
+		"electron-updater": "^5.0.1",
 		"eslint-import-resolver-alias": "^1.1.2",
-		"font-list": "^1.3.1",
-		"fs-extra": "^10.0.0",
+		"font-list": "^1.4.5",
+		"fs-extra": "^10.1.0",
 		"get-system-fonts": "^2.0.2",
-		"gitea-react-toolkit": "^1.3.5",
-		"i18next": "^21.6.14",
-		"is-electron": "^2.2.0",
+		"gitea-react-toolkit": "^2.1.2",
+		"i18next": "^21.8.9",
+		"is-electron": "^2.2.1",
 		"js-yaml": "^4.1.0",
 		"jsonwebtoken": "^8.5.1",
-		"localforage": "1.9.0",
-		"markdown-translatable": "^1.0.4",
+		"localforage": "1.10.0",
+		"markdown-translatable": "^2.1.1",
 		"md5": "^2.3.0",
-		"moment": "^2.28.0",
-		"next": "^12.0.4",
-		"next-images": "^1.8.1",
-		"next-on-netlify": "^2.6.3",
+		"moment": "^2.29.3",
+		"next": "^12.1.6",
+		"next-images": "^1.8.4",
+		"next-on-netlify": "^3.0.1",
 		"next-optimized-images": "^2.6.2",
-		"next-transpile-modules": "^8.0.0",
 		"nprogress": "^0.2.0",
-		"parse": "^3.3.0",
-		"postcss-import": "^14.0.2",
+		"parse": "^3.4.2",
+		"postcss-import": "^14.1.0",
 		"postcss-nested": "^5.0.6",
-		"prefs-rcl": "^0.1.8",
-		"prop-types": "15.7.2",
+		"prop-types": "15.8.1",
 		"raw-loader": "^4.0.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-i18next": "^11.16.1",
-		"react-intl": "^5.18.0",
-		"translation-helps-rcl": "^1.5.0",
-		"usfm-editor": "0.8.0",
-		"usfm-grammar": "^2.0.0",
+		"react-i18next": "^11.17.1",
+		"react-intl": "^6.0.4",
+		"tc-ui-toolkit": "^6.1.0",
+		"translation-helps-rcl": "^3.3.0",
+		"usfm-editor": "0.8.7",
+		"usfm-grammar": "^2.3.0",
 		"uuid": "^8.3.2",
 		"webpack-node-externals": "^3.0.0",
-		"winston": "^3.3.3",
-		"ws": "^7.5.0"
+		"winston": "^3.7.2",
+		"word-aligner": "^1.0.0",
+		"ws": "^8.8.0"
 	},
 	"optionalDependencies": {
-		"bufferutil": "^4.0.3",
-		"scripture-resources-rcl": "^3.2.0",
-		"utf-8-validate": "^5.0.5"
+		"bufferutil": "^4.0.6",
+		"scripture-resources-rcl": "^5.1.0",
+		"utf-8-validate": "^5.0.9"
 	}
 }
