--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,17 @@
 		"no-param-reassign": [2, { "props": false }],
 		"camelcase": "off",
 		"consistent-return": "off",
+		"react/function-component-definition": [
+			2,
+			{
+				"namedComponents": [
+					"function-declaration",
+					"function-expression",
+					"arrow-function"
+				],
+				"unnamedComponents": ["function-expression", "arrow-function"]
+			}
+		],
 		"react/jsx-filename-extension": [
 			1,
 			{
