--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 name: Test Check
-on: [push,  pull_request_target]
+on: [push, pull_request_target]
 jobs:
     build:
         name: Tests
@@ -16,7 +16,7 @@ jobs:
             - name: set @bitregistry translation-help
               run: npm config set '@bit:registry' https://node.bit.dev
 
-            - name: npm install
+            - name: npm install --legacy-peer-deps
               run: npm ci
 
             - name: run tests
