--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,7 +29,7 @@ jobs:
             - name: set @bitregistry translation-help
               run: npm config set '@bit:registry' https://node.bit.dev
 
-            - name: npm install --legacy-peer-deps
+            - name: npm install
               run: npm ci
 
             - name: set max memory allocation
@@ -78,7 +78,7 @@ jobs:
             - name: set @bitregistry translation-help
               run: npm config set '@bit:registry' https://node.bit.dev
 
-            - name: npm install --legacy-peer-deps
+            - name: npm install
               run: npm ci
 
             - name: set max memory allocation
@@ -134,7 +134,7 @@ jobs:
             - name: set @bitregistry translation-help
               run: npm config set '@bit:registry' https://node.bit.dev
 
-            - name: npm install --legacy-peer-deps
+            - name: npm install
               run: npm ci
 
             - name: set max memory allocation
