--- a/package.json
+++ b/package.json
@@ -87,7 +87,7 @@
 		"@testing-library/jest-dom": "^5.16.4",
 		"@testing-library/react": "^12.1.2",
 		"@testing-library/user-event": "14.2.0",
-		"ajv": "^8.11.0",
+		"ajv": "^6.12.2",
 		"autoprefixer": "^10.4.7",
 		"babel-jest": "^28.1.1",
 		"babel-plugin-istanbul": "^6.1.1",
@@ -118,7 +118,7 @@
 		"@heroicons/react": "^1.0.6",
 		"@material-ui/core": "^4.12.4",
 		"@material-ui/icons": "^4.11.3",
-		"@material-ui/lab": "latest",
+		"@material-ui/lab": "4.0.0-alpha.57",
 		"@ory/kratos-client": "^0.10.1",
 		"@parse/react-ssr": "0.0.1-alpha.18",
 		"@tailwindcss/forms": "^0.5.2",
@@ -139,7 +139,7 @@
 		"js-yaml": "^4.1.0",
 		"jsonwebtoken": "^8.5.1",
 		"localforage": "1.10.0",
-		"markdown-translatable": "^2.1.1",
+		"markdown-translatable": "^1.3.0",
 		"md5": "^2.3.0",
 		"moment": "^2.29.3",
 		"next": "^12.1.6",
@@ -156,7 +156,7 @@
 		"react-dom": "^17.0.2",
 		"react-i18next": "^11.17.1",
 		"react-intl": "^6.0.4",
-		"tc-ui-toolkit": "^6.1.0",
+		"tc-ui-toolkit": "^5.3.3",
 		"translation-helps-rcl": "^3.3.0",
 		"usfm-editor": "0.8.7",
 		"usfm-grammar": "^2.3.0",
@@ -170,5 +170,12 @@
 		"bufferutil": "^4.0.6",
 		"scripture-resources-rcl": "^5.1.0",
 		"utf-8-validate": "^5.0.9"
+	},
+	"overrides": {
+		"react": "$react",
+		"react-dom": "$react-dom",
+		"@material-ui/lab": "$@material-ui/lab",
+		"gitea-react-toolkit": "$gitea-react-toolkit",
+		"word-aligner": "$word-aligner"
 	}
 }
