--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "A Bible translation editor for everyone.",
 	"email": "autographa.support@bridgeconn.com",
 	"author": "Friends of Agape <autographa.support@bridgeconn.com>",
-	"version": "2.0.2",
+	"version": "2.1.0",
 	"license": "MIT",
 	"private": true,
 	"main": "main/index.js",
@@ -94,7 +94,7 @@
 		"babel-plugin-react-intl": "^3.0.1",
 		"buffer-loader": "^0.1.0",
 		"canvas": "^2.9.1",
-		"electron": "19.0.4",
+		"electron": "19.0.0",
 		"electron-builder": "^23.0.3",
 		"eslint": "^8.17.0",
 		"eslint-config-airbnb": "^19.0.4",
@@ -114,6 +114,7 @@
 		"tailwindcss": "^3.1.2"
 	},
 	"dependencies": {
+		"@electron/remote": "^2.0.8",
 		"@headlessui/react": "^1.6.4",
 		"@heroicons/react": "^1.0.6",
 		"@material-ui/core": "^4.12.4",
