--- a/renderer/jsconfig.json
+++ b/renderer/jsconfig.json
@@ -23,6 +23,9 @@
       "@/illustrations/*": [
         "public/illustrations/*"
       ],
+      "@/hooks/*":[
+        "src/components/hooks/*"
+      ]
     }
   }
 }
