--- a/package.json
+++ b/package.json
@@ -1,185 +1,194 @@
 {
-	"name": "autographa",
-	"productName": "autographa-editor",
-	"description": "A Bible translation editor for everyone.",
-	"email": "autographa.support@bridgeconn.com",
-	"author": "Friends of Agape <autographa.support@bridgeconn.com>",
-	"version": "2.2.0-beta.3",
-	"license": "MIT",
-	"private": true,
-	"main": "main/index.js",
-	"homepage": "./",
-	"repository": {
-		"type": "git",
-		"url": "https://github.com/friendsofagape/autographa"
-	},
-	"scripts": {
-		"clean": "rimraf dist renderer/.next renderer/out",
-		"start": "electron .",
-		"dev": "next dev",
-		"prod": "npm run build && next start",
-		"test": "jest",
-		"e2e": "npx playwright test",
-		"lint": "eslint ./renderer/src",
-		"lint:fix": "eslint ./renderer/src --fix",
-		"maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
-		"eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
-		"build": "next build renderer && next export renderer",
-		"pack-app": "npm run build && electron-builder --dir",
-		"dist": "npm run build && electron-builder -p never",
-		"deploy": "npm run build && electron-builder -p always"
-	},
-	"eslintIgnore": [
-		"*.test.js"
-	],
-	"build": {
-		"asar": true,
-		"extraResources": "renderer/public",
-		"files": [
-			"main",
-			"renderer/out",
-			"public",
-			"renderer/public/**/*",
-			"build/**/*",
-			"main",
-			"postcss.config.js",
-			"renderer/jsconfig.json",
-			"styles/**/*"
-		],
-		"linux": {
-			"target": [
-				"deb"
-			]
-		},
-		"mac": {
-			"category": "public.app-category.Utilities",
-			"target": "dmg",
-			"icon": "styles/autographa_logo.ico",
-			"type": "distribution"
-		},
-		"win": {
-			"target": "nsis",
-			"icon": "styles/autographa_icon.png",
-			"publish": [
-				"github"
-			]
-		},
-		"nsis": {
-			"allowToChangeInstallationDirectory": true,
-			"oneClick": false
-		},
-		"publish": [
-			{
-				"provider": "github",
-				"owner": "vipinpaul",
-				"repo": "autographa"
-			}
-		]
-	},
-	"devDependencies": {
-		"@babel/eslint-parser": "^7.5.4",
-		"@babel/preset-env": "^7.18.2",
-		"@babel/preset-react": "^7.17.12",
-		"@netlify/plugin-nextjs": "^4.8.0",
-		"@playwright/test": "^1.22.2",
-		"@svgr/webpack": "^5.5.0",
-		"@testing-library/dom": "^8.13.0",
-		"@testing-library/jest-dom": "^5.16.4",
-		"@testing-library/react": "^12.1.2",
-		"@testing-library/user-event": "14.2.0",
-		"ajv": "^6.12.2",
-		"autoprefixer": "^10.4.7",
-		"babel-jest": "^28.1.1",
-		"babel-plugin-istanbul": "^6.1.1",
-		"buffer-loader": "^0.1.0",
-		"canvas": "^2.9.1",
-		"electron": "21.0.1",
-		"electron-builder": "^23.6.0",
-		"eslint": "^8.17.0",
-		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-next": "^13.0.0",
-		"eslint-plugin-import": "^2.26.0",
-		"eslint-plugin-jsx-a11y": "^6.5.1",
-		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-react": "^7.30.0",
-		"eslint-plugin-react-hooks": "^4.5.0",
-		"eslint-plugin-simple-import-sort": "^7.0.0",
-		"jest": "^26.6.3",
-		"jest-dom": "^4.0.0",
-		"null-loader": "^4.0.1",
-		"playwright": "^1.22.2",
-		"postcss": "^8.4.14",
-		"prettier": "^2.7.0",
-		"tailwindcss": "^3.1.3"
-	},
-	"dependencies": {
-		"@electron/remote": "^2.0.8",
-		"@emotion/styled": "^11.10.4",
-		"@headlessui/react": "^1.6.4",
-		"@heroicons/react": "^1.0.6",
-		"@material-ui/core": "^4.12.4",
-		"@material-ui/icons": "^4.11.3",
-		"@material-ui/lab": "4.0.0-alpha.57",
-		"@mui/lab": "^5.0.0-alpha.104",
-		"@ory/kratos-client": "^0.10.1",
-		"@tailwindcss/forms": "^0.5.2",
-		"@tailwindcss/typography": "^0.5.2",
-		"adm-zip": "^0.5.9",
-		"bible-reference-rcl": "^1.1.0",
-		"clsx": "1.1.1",
-		"electron-is-dev": "^2.0.0",
-		"electron-log": "4.4.7",
-		"electron-next": "^3.1.5",
-		"electron-updater": "^5.0.1",
-		"eslint-import-resolver-alias": "^1.1.2",
-		"font-list": "^1.4.5",
-		"fs-extra": "^10.1.0",
-		"get-system-fonts": "^2.0.2",
-		"gitea-react-toolkit": "^2.1.2",
-		"i18next": "^21.8.9",
-		"is-electron": "^2.2.1",
-		"js-yaml": "^4.1.0",
-		"jsonwebtoken": "^8.5.1",
-		"localforage": "1.10.0",
-		"markdown-translatable": "^1.3.0",
-		"md5": "^2.3.0",
-		"moment": "^2.29.3",
-		"next": "^13.0.0",
-		"next-images": "^1.8.4",
-		"next-on-netlify": "^3.0.1",
-		"next-optimized-images": "^2.6.2",
-		"nprogress": "^0.2.0",
-		"postcss-import": "^14.1.0",
-		"postcss-nested": "^5.0.6",
-		"prop-types": "15.8.1",
-		"raw-loader": "^4.0.2",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-i18next": "^11.17.1",
-		"react-media-recorder": "^1.6.6",
-		"styled-components": "^5.3.6",
-		"tc-ui-toolkit": "^5.3.3",
-		"translation-helps-rcl": "^3.3.4-rc.3",
-		"usfm-editor": "0.8.7",
-		"usfm-grammar": "^2.3.0",
-		"uuid": "^8.3.2",
-		"wavesurfer.js": "^6.2.0",
-		"webpack-node-externals": "^3.0.0",
-		"winston": "^3.7.2",
-		"word-aligner": "^1.0.0",
-		"ws": "^8.8.0"
-	},
-	"optionalDependencies": {
-		"bufferutil": "^4.0.6",
-		"scripture-resources-rcl": "^5.1.0",
-		"utf-8-validate": "^5.0.9"
-	},
-	"overrides": {
-		"react": "$react",
-		"react-dom": "$react-dom",
-		"@material-ui/lab": "$@material-ui/lab",
-		"gitea-react-toolkit": "$gitea-react-toolkit",
-		"word-aligner": "$word-aligner",
-		"@mui/lab": "$@mui/lab"
-	}
+  "name": "autographa",
+  "productName": "autographa-editor",
+  "description": "A Bible translation editor for everyone.",
+  "email": "autographa.support@bridgeconn.com",
+  "author": "Friends of Agape <autographa.support@bridgeconn.com>",
+  "version": "2.2.0-beta.3",
+  "license": "MIT",
+  "private": true,
+  "main": "main/index.js",
+  "homepage": "./",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/friendsofagape/autographa"
+  },
+  "scripts": {
+    "clean": "rimraf dist renderer/.next renderer/out",
+    "start": "electron .",
+    "dev": "next dev",
+    "prod": "npm run build && next start",
+    "test": "jest",
+    "e2e": "npx playwright test",
+    "lint": "eslint ./renderer/src",
+    "lint:fix": "eslint ./renderer/src --fix",
+    "maxmemory-allocation": "NODE_OPTIONS=--max_old_space_size=4096",
+    "eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
+    "build": "next build renderer && next export renderer",
+    "pack-app": "npm run build && electron-builder --dir",
+    "dist": "npm run build && electron-builder -p never",
+    "deploy": "npm run build && electron-builder -p always"
+  },
+  "eslintIgnore": [
+    "*.test.js"
+  ],
+  "build": {
+    "asar": true,
+    "extraResources": "renderer/public",
+    "files": [
+      "main",
+      "renderer/out",
+      "public",
+      "renderer/public/**/*",
+      "build/**/*",
+      "main",
+      "postcss.config.js",
+      "renderer/jsconfig.json",
+      "styles/**/*"
+    ],
+    "linux": {
+      "target": [
+        "deb"
+      ]
+    },
+    "mac": {
+      "category": "public.app-category.Utilities",
+      "target": "dmg",
+      "icon": "styles/autographa_logo.ico",
+      "type": "distribution"
+    },
+    "win": {
+      "target": "nsis",
+      "icon": "styles/autographa_icon.png",
+      "publish": [
+        "github"
+      ]
+    },
+    "nsis": {
+      "allowToChangeInstallationDirectory": true,
+      "oneClick": false
+    },
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "vipinpaul",
+        "repo": "autographa"
+      }
+    ]
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.5.4",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.17.12",
+    "@netlify/plugin-nextjs": "^4.8.0",
+    "@playwright/test": "^1.22.2",
+    "@svgr/webpack": "^5.5.0",
+    "@testing-library/dom": "^8.13.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "14.2.0",
+    "ajv": "^6.12.2",
+    "autoprefixer": "^10.4.7",
+    "babel-jest": "^28.1.1",
+    "babel-plugin-istanbul": "^6.1.1",
+    "buffer-loader": "^0.1.0",
+    "canvas": "^2.9.1",
+    "electron": "21.0.1",
+    "electron-builder": "^23.6.0",
+    "eslint": "^8.17.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "^13.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.30.0",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "jest": "^26.6.3",
+    "jest-dom": "^4.0.0",
+    "null-loader": "^4.0.1",
+    "playwright": "^1.22.2",
+    "postcss": "^8.4.14",
+    "prettier": "^2.7.0",
+    "tailwindcss": "^3.1.3"
+  },
+  "dependencies": {
+    "@electron/remote": "^2.0.8",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@headlessui/react": "^1.6.4",
+    "@heroicons/react": "^1.0.6",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@material-ui/lab": "4.0.0-alpha.57",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.104",
+    "@mui/material": "^5.10.12",
+    "@ory/kratos-client": "^0.10.1",
+    "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.2",
+    "@xelah/type-perf-html": "1.0.0",
+    "adm-zip": "^0.5.9",
+    "bible-reference-rcl": "^1.1.0",
+    "clsx": "1.1.1",
+    "electron-is-dev": "^2.0.0",
+    "electron-log": "4.4.7",
+    "electron-next": "^3.1.5",
+    "electron-updater": "^5.0.1",
+    "epitelete-html": "^0.2.10",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "font-list": "^1.4.5",
+    "fs-extra": "^10.1.0",
+    "get-system-fonts": "^2.0.2",
+    "gitea-react-toolkit": "^2.1.2",
+    "i18next": "^21.8.9",
+    "is-electron": "^2.2.1",
+    "js-yaml": "^4.1.0",
+    "jsonwebtoken": "^8.5.1",
+    "localforage": "1.10.0",
+    "lodash.isequal": "^4.5.0",
+    "markdown-translatable": "^1.3.0",
+    "md5": "^2.3.0",
+    "moment": "^2.29.3",
+    "next": "^13.0.0",
+    "next-images": "^1.8.4",
+    "next-on-netlify": "^3.0.1",
+    "next-optimized-images": "^2.6.2",
+    "nprogress": "^0.2.0",
+    "phosphor-react": "^1.4.1",
+    "postcss-import": "^14.1.0",
+    "postcss-nested": "^5.0.6",
+    "prop-types": "15.8.1",
+    "proskomma-react-hooks": "2.4.0",
+    "raw-loader": "^4.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^11.17.1",
+    "react-media-recorder": "^1.6.6",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
+    "tc-ui-toolkit": "^5.3.3",
+    "translation-helps-rcl": "^3.3.4-rc.3",
+    "usfm-editor": "0.8.7",
+    "usfm-grammar": "^2.3.0",
+    "uuid": "^8.3.2",
+    "wavesurfer.js": "^6.2.0",
+    "webpack-node-externals": "^3.0.0",
+    "winston": "^3.7.2",
+    "word-aligner": "^1.0.0",
+    "ws": "^8.8.0"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.6",
+    "scripture-resources-rcl": "^5.1.0",
+    "utf-8-validate": "^5.0.9"
+  },
+  "overrides": {
+    "react": "$react",
+    "react-dom": "$react-dom",
+    "@material-ui/lab": "$@material-ui/lab",
+    "gitea-react-toolkit": "$gitea-react-toolkit",
+    "word-aligner": "$word-aligner",
+    "@mui/lab": "$@mui/lab"
+  }
 }
