updating the flow with dmg-licence

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -137,6 +137,9 @@ jobs:
             - name: npm install
               run: npm ci
 
+            - name: install dmg-license
+              run: npm i dmg-license
+
             - name: set max memory allocation
               run: export NODE_OPTIONS=–max_old_space_size=4096
 
