updating the version to 0.1.1

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "scribe",
   "productName": "scribe-scripture-editor",
   "description": "A friendly assistant for Bible Translators.",
-  "author": "Bible Technology",
-  "version": "0.1.0",
+  "author": "Bible Technology <autographa.support@bridgeconn.com>",
+  "version": "0.1.1",
   "license": "MIT",
   "private": true,
   "main": "main/index.js",
