--- a/package.json
+++ b/package.json
@@ -171,7 +171,7 @@
         "react-scripts": "5.0.1",
         "styled-components": "^5.3.6",
         "tc-ui-toolkit": "^5.3.3",
-        "translation-helps-rcl": "^3.3.4-rc.3",
+        "translation-helps-rcl": "^3.3.7",
         "use-deep-compare": "^1.1.0",
         "usfm-editor": "0.8.7",
         "usfm-grammar": "^2.3.0",
