font-selection & bug fixes

--- a/package.json
+++ b/package.json
@@ -143,6 +143,7 @@
     "electron-updater": "^5.0.1",
     "epitelete-html": "0.2.19-beta.1",
     "eslint-import-resolver-alias": "^1.1.2",
+    "font-detect-rhl": "^1.0.5-1",
     "font-list": "^1.4.5",
     "fs-extra": "^10.1.0",
     "get-system-fonts": "^2.0.2",
